feature adapt jdk21